Fix solid roof, explain refresh options

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 			<label>Color
 				<select id="paint">
 					<optgroup label="Signature">
-						<option value="COL0-PPSR">Red</option>
+						<option value="COL0-PPSR">Red (&lt;2016)</option>
 					</option>
 					<optgroup label="Solid">
 						<option value="COL1-PBSB">Eclipse Black</option>
@@ -23,11 +23,11 @@
 					</optgroup>
 					<optgroup label="Metallic">
 						<option value="COL2-PMBL">Obsidian Black</option>
-						<option value="COL2-PMMB">Pacific Blue</option>
+						<option value="COL2-PMMB">Pacific Blue (&lt;2016)</option>
 						<option value="COL2-PPSB">Deep Blue</option>
-						<option value="COL2-PMAB">Anza Brown</option>
-						<option value="COL2-PMSG">Sequoia Green</option>
-						<option value="COL2-PMTG">Dolphin Grey</option>
+						<option value="COL2-PMAB">Anza Brown (&lt;2016)</option>
+						<option value="COL2-PMSG">Sequoia Green (&lt;2016)</option>
+						<option value="COL2-PMTG">Dolphin Grey (&lt;2016)</option>
 						<option value="COL2-PMSS">Starlight Silver</option>
 						<option value="COL2-PMNG">Midnight Silver</option>
 						<option value="COL2-PPTI">Titanium</option>
@@ -41,8 +41,8 @@
 			<label>Wheels
 				<select id="wheels">
 					<optgroup label="19″">
-						<option value="WT19">Silver Split 5-Spoke</option>
-						<option value="WTAE">Silver Aero</option>
+						<option value="WT19">Silver Split 5-Spoke (&lt;2016)</option>
+						<option value="WTAE">Silver Aero (&lt;2016)</option>
 						<option value="WTAS">Silver Slipstream</option>
 						<option value="WTDS">Grey Slipstream (2016+)</option>
 						<option value="WTTB">Silver Cyclone</option>
@@ -97,7 +97,7 @@
 			</label>
 			<label>Roof
 				<select id="roof">
-					<option value="RFBK">Solid Color</option>
+					<option value="RFBC">Solid Color</option>
 					<option value="RFBK">Solid Black</option>
 					<option value="RFP2">Sunroof</option>
 					<option value="RFPO">Panoramic</option>
