Rear spoiler 2016 clarifications

--- a/src/index.html
+++ b/src/index.html
@@ -71,9 +71,9 @@
 						<option value="IZMT">Tan</option>
 					</optgroup>
 					<optgroup label="Signature Perforated Leather">
-						<option value="ISZW">White</option>
-						<option value="ISZB">Black</option>
-						<option value="ISZT">Tan</option>
+						<option value="ISZW">White (&lt;2016)</option>
+						<option value="ISZB">Black (&lt;2016)</option>
+						<option value="ISZT">Tan (&lt;2016)</option>
 					</optgroup>
 				</select>
 				<label>Decor
@@ -85,7 +85,6 @@
 						<option value="IDPB">Piano Black</option>
 						<option value="IDBA">Dark Ash Wood</option>
 						<option value="IDBO">Figured Ash Wood (2016+)</option>
-						<option value="IDPB">Piano Black</option>
 					</select>
 			</label>
 			<label>Headliner
@@ -98,7 +97,7 @@
 			<label>Roof
 				<select id="roof">
 					<option value="RFBC">Solid Color</option>
-					<option value="RFBK">Solid Black</option>
+					<option value="RFBK">Solid Black (&lt;2016)</option>
 					<option value="RFP2">Sunroof</option>
 					<option value="RFPO">Panoramic</option>
 				</select>
@@ -118,12 +117,13 @@
 					</optgroup>
 					<optgroup label="Interior">
 						<option value="STUD_SEAT">Side</option>
-						<option value="STUD_SEAT_3QTR">Front seat</option>
+						<option value="STUD_SEAT_3QTR">Front seat (&lt; 2016)</option>
 						<option value="STUD_SEAT_ABOVE">Above</option>
-						<option value="STUD_SEAT_ALTA">Seats</option>
+						<option value="STUD_SEAT_ALTA">Seats (2016+)</option>
 					</optgroup>
 				</select>
 			</label>
+			<input id="rearspoiler" type="checkbox">Rear Spoiler</input>
 			<input id="refresh2016" type="checkbox">2016 refresh</input>
 			<input id="transparent" type="checkbox">Transparent background</input>
 		</form>
