Combine paint with 2016 refresh to avoid mismatches

--- a/src/index.html
+++ b/src/index.html
@@ -12,29 +12,38 @@
 			</header>
 		</main>
 		<form id="options">
-			<label>Color
+			<label>Paint
 				<select id="paint">
 					<optgroup label="Signature">
-						<option value="COL0-PPSR">Red (&lt;2016)</option>
+						<option value="COL0-PPSR">Red (2012)</option>
 					</option>
 					<optgroup label="Solid">
-						<option value="COL1-PBSB">Eclipse Black</option>
-						<option value="COL1-PBCW">Catalina White</option>
+						<option value="COL1-PBSB">Eclipse Black (2012)</option>
+						<option value="COL1-PBSB,MI01">Eclipse Black (2016)</option>
+						<option value="COL1-PBCW">Catalina White (2012)</option>
+						<option value="COL1-PBCW,MI01">Catalina White (2016)</option>
 					</optgroup>
 					<optgroup label="Metallic">
-						<option value="COL2-PMBL">Obsidian Black</option>
-						<option value="COL2-PMMB">Pacific Blue (&lt;2016)</option>
-						<option value="COL2-PPSB">Deep Blue</option>
-						<option value="COL2-PMAB">Anza Brown (&lt;2016)</option>
-						<option value="COL2-PMSG">Sequoia Green (&lt;2016)</option>
-						<option value="COL2-PMTG">Dolphin Grey (&lt;2016)</option>
-						<option value="COL2-PMSS">Starlight Silver</option>
-						<option value="COL2-PMNG">Midnight Silver</option>
-						<option value="COL2-PPTI">Titanium</option>
+						<option value="COL2-PMBL">Obsidian Black (2012)</option>
+						<option value="COL2-PMBL,MI01">Obsidian Black (2016)</option>
+						<option value="COL2-PMMB">Pacific Blue (2012)</option>
+						<option value="COL2-PPSB">Deep Blue (2012)</option>
+						<option value="COL2-PPSB,MI01">Deep Blue (2016)</option>
+						<option value="COL2-PMAB">Anza Brown (2012)</option>
+						<option value="COL2-PMSG">Sequoia Green (2012)</option>
+						<option value="COL2-PMTG">Dolphin Grey (2012)</option>
+						<option value="COL2-PMSS">Starlight Silver (2012)</option>
+						<option value="COL2-PMSS,MI01">Starlight Silver (2016)</option>
+						<option value="COL2-PMNG">Midnight Silver (2012)</option>
+						<option value="COL2-PMNG,MI01">Midnight Silver (2016)</option>
+						<option value="COL2-PPTI">Titanium (2012)</option>
+						<option value="COL2-PPTI,MI01">Titanium (2016)</option>
 					</optgroup>
 					<optgroup label="Multi-Coat">
-						<option value="COL3-PPMR">Sunset Red</option>
-						<option value="COL3-PPSW">Pearl White</option>
+						<option value="COL3-PPMR">Sunset Red (2012)</option>
+						<option value="COL3-PPMR,MI01">Sunset Red (2016)</option>
+						<option value="COL3-PPSW">Pearl White (2012)</option>
+						<option value="COL3-PPSW,MI01">Pearl White (2016)</option>
 					</optgroup>
 				</select>
 			</label>
@@ -119,12 +128,11 @@
 						<option value="STUD_SEAT">Side</option>
 						<option value="STUD_SEAT_3QTR">Front seat (&lt; 2016)</option>
 						<option value="STUD_SEAT_ABOVE">Above</option>
-						<option value="STUD_SEAT_ALTA">Seats (2016+)</option>
+						<option value="STUD_SEAT_ALTA">Seats</option>
 					</optgroup>
 				</select>
 			</label>
 			<input id="rearspoiler" type="checkbox">Rear Spoiler</input>
-			<input id="refresh2016" type="checkbox">2016 refresh</input>
 			<input id="transparent" type="checkbox">Transparent background</input>
 		</form>
 		<section id="visual">
