--- a/src/index.html
+++ b/src/index.html
@@ -123,12 +123,15 @@
 						<option value="STUD_SIDE">Side</option>
 						<option value="STUD_3QTR">Front</option>
 						<option value="STUD_REAR">Rear</option>
+						<option value="STUD_ABOV">Above</option>
+						<option value="OUT1_3QTR">Outside 3D (2012)</option>
 					</optgroup>
 					<optgroup label="Interior">
 						<option value="STUD_SEAT">Side</option>
-						<option value="STUD_SEAT_3QTR">Front seat (&lt; 2016)</option>
+						<option value="STUD_SEAT_DRIVER">Drivers seat (2012)</option>
+						<option value="STUD_SEAT_3QTR">Passenger seat (2012)</option>
 						<option value="STUD_SEAT_ABOVE">Above</option>
-						<option value="STUD_SEAT_ALTA">Seats</option>
+						<option value="STUD_SEAT_ALTA">Seats (2016)</option>
 					</optgroup>
 				</select>
 			</label>
