Remove wheels from 3

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 					</optgroup>
 				</select>
 			</label>
-			<label>Wheels
+			<label class="ms">Wheels
 				<select id="wheels">
-					<optgroup class="ms" label="19″">
+					<optgroup label="19″">
 						<option value="WT19">Silver Split 5-Spoke (2012)</option>
 						<option value="WTAE">Silver Aero (2016)</option>
 						<option value="WTAS">Silver Slipstream</option>
@@ -69,7 +69,7 @@
 						<option value="WTTB">Silver Cyclone</option>
 						<option value="WTGP">Grey Cyclone (2016)</option>
 					</optgroup>
-					<optgroup class="ms" label="21″">
+					<optgroup label="21″">
 						<option value="WT21">Silver Turbine</option>
 						<option value="WTSG">Grey Turbine</option>
 					</optgroup>
