--- a/index.html
+++ b/index.html
@@ -137,16 +137,16 @@
 					<optgroup label="Exterior">
 						<option value="STUD_SIDE">Side</option>
 						<option value="STUD_3QTR">Front</option>
-						<option class="m3" value="STUD_REAR">Rear</option>
-						<option class="m3" value="STUD_ABOV">Above</option>
-						<option class="m3" value="OUT1_3QTR">Outside 3D (2012)</option>
+						<option class="ms" value="STUD_REAR">Rear</option>
+						<option class="ms" value="STUD_ABOV">Above</option>
+						<option class="ms" value="OUT1_3QTR">Outside 3D (2012)</option>
 					</optgroup>
 					<optgroup label="Interior">
 						<option value="STUD_SEAT">Side</option>
-						<option class="m3" value="STUD_SEAT_DRIVER">Driver (2012)</option>
-						<option class="m3" value="STUD_SEAT_3QTR">Passenger (2012)</option>
-						<option class="m3" value="STUD_SEAT_ABOVE">Above</option>
-						<option class="m3" value="STUD_SEAT_ALTA">Seats (2016)</option>
+						<option class="ms" value="STUD_SEAT_DRIVER">Driver (2012)</option>
+						<option class="ms" value="STUD_SEAT_3QTR">Passenger (2012)</option>
+						<option class="ms" value="STUD_SEAT_ABOVE">Above</option>
+						<option class="ms" value="STUD_SEAT_ALTA">Seats (2016)</option>
 					</optgroup>
 				</select>
 			</label>
