Hide rear spoiler for 3

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					<option value="BC0R">Red</option>
 				</select>
 			</label>
-			<input class="ms" id="rearspoiler" type="checkbox">Rear Spoiler</input>
+			<label class="ms"><input id="rearspoiler" type="checkbox"/>Rear Spoiler</label>
 			<label>View
 				<select id="view">
 					<optgroup label="Exterior">
