Add premium S seats

--- a/index.html
+++ b/index.html
@@ -78,12 +78,21 @@
 			<label class="ms">Seats
 				<select id="seats">
 					<optgroup label="Textile">
-						<option value="IBMB">Black</option>
+						<option value="IBMB">Black (2012)</option>
+						<option value="QTTB">Black (2016)</option>
 					</optgroup>
-					<optgroup label="Leather">
+					<optgroup label="Leather (2012)">
 						<option value="IPMB">Black</option>
 						<option value="IPMG">Gray</option>
 						<option value="IPMT">Tan</option>
+					</optgroup>
+					<optgroup label="Leather (2016)">
+						<option value="QPMB">Black</option>
+					</optgroup>
+					<optgroup label="Premium (2016)">
+						<option value="QTPP">Black</option>
+						<option value="QTPC">Cream</option>
+						<option value="QTPW">White</option>
 					</optgroup>
 					<optgroup label="Performance Leather">
 						<option value="IZZW">White</option>
