Split 2012 and 2016 into models

--- a/index.html
+++ b/index.html
@@ -15,59 +15,51 @@
 			<label>Model
 				<select id="model">
 					<option value="m3">3</option>
-					<option value="ms">S</option>
+					<option value="ms-2012">S (2012)</option>
+					<option value="ms-2016">S (2016)</option>
 				</select>
 			<label>Paint
 				<select id="paint">
-					<optgroup class="ms" label="Signature">
-						<option value="COL0-PPSR">Red (2012)</option>
+					<optgroup class="ms-2012" label="Signature">
+						<option value="COL0-PPSR">Red</option>
 					</option>
 					<optgroup label="Solid">
 						<option class="m3" value="PBSB">Black</option>
-						<option class="ms" value="COL1-PBSB">Eclipse Black (2012)</option>
-						<option class="ms" value="COL1-PBSB,MI01">Eclipse Black (2016)</option>
-						<option class="ms" value="COL1-PBCW">Catalina White (2012)</option>
-						<option class="ms" value="COL1-PBCW,MI01">Catalina White (2016)</option>
+						<option class="ms" value="COL1-PBSB">Eclipse Black</option>
+						<option class="ms" value="COL1-PBCW">Catalina White</option>
 					</optgroup>
 					<optgroup label="Metallic">
 						<option class="m3" value="PPSB">Deep Blue</option>
 						<option class="m3" value="PMLS">Silver</option>
 						<option class="m3" value="PMNG">Midnight Silver</option>
 						<option class="m3" value="PMSS">Silver (again?)</option>
-						<option class="ms" value="COL2-PMBL">Obsidian Black (2012)</option>
-						<option class="ms" value="COL2-PMBL,MI01">Obsidian Black (2016)</option>
-						<option class="ms" value="COL2-PMMB">Pacific Blue (2012)</option>
-						<option class="ms" value="COL2-PPSB">Deep Blue (2012)</option>
-						<option class="ms" value="COL2-PPSB,MI01">Deep Blue (2016)</option>
-						<option class="ms" value="COL2-PMAB">Anza Brown (2012)</option>
-						<option class="ms" value="COL2-PMSG">Sequoia Green (2012)</option>
-						<option class="ms" value="COL2-PMTG">Dolphin Grey (2012)</option>
-						<option class="ms" value="COL2-PMSS">Starlight Silver (2012)</option>
-						<option class="ms" value="COL2-PMSS,MI01">Starlight Silver (2016)</option>
-						<option class="ms" value="COL2-PMNG">Midnight Silver (2012)</option>
-						<option class="ms" value="COL2-PMNG,MI01">Midnight Silver (2016)</option>
-						<option class="ms" value="COL2-PPTI">Titanium (2012)</option>
-						<option class="ms" value="COL2-PPTI,MI01">Titanium (2016)</option>
+						<option class="ms" value="COL2-PMBL">Obsidian Black</option>
+						<option class="ms-2012" value="COL2-PMMB">Pacific Blue</option>
+						<option class="ms" value="COL2-PPSB">Deep Blue</option>
+						<option class="ms-2012" value="COL2-PMAB">Anza Brown</option>
+						<option class="ms-2012" value="COL2-PMSG">Sequoia Green</option>
+						<option class="ms-2012" value="COL2-PMTG">Dolphin Grey</option>
+						<option class="ms" value="COL2-PMSS">Starlight Silver</option>
+						<option class="ms" value="COL2-PMNG">Midnight Silver</option>
+						<option class="ms" value="COL2-PPTI">Titanium</option>
 					</optgroup>
 					<optgroup label="Multi-Coat">
 						<option class="m3" value="PPMR">Red</option>
 						<option class="m3" value="PPSW">Pearl White</option>
-						<option class="ms" value="COL3-PPMR">Sunset Red (2012)</option>
-						<option class="ms" value="COL3-PPMR,MI01">Sunset Red (2016)</option>
-						<option class="ms" value="COL3-PPSW">Pearl White (2012)</option>
-						<option class="ms" value="COL3-PPSW,MI01">Pearl White (2016)</option>
+						<option class="ms" value="COL3-PPMR">Sunset Red</option>
+						<option class="ms" value="COL3-PPSW">Pearl White</option>
 					</optgroup>
 				</select>
 			</label>
 			<label class="ms">Wheels
 				<select id="wheels">
 					<optgroup label="19″">
-						<option value="WT19">Silver Split 5-Spoke (2012)</option>
-						<option value="WTAE">Silver Aero (2016)</option>
+						<option class="ms-2012" value="WT19">Silver Split 5-Spoke</option>
+						<option class="ms-2012" value="WTAE">Silver Aero</option>
 						<option value="WTAS">Silver Slipstream</option>
-						<option value="WTDS">Grey Slipstream (2016)</option>
+						<option class="ms-2016" value="WTDS">Grey Slipstream</option>
 						<option value="WTTB">Silver Cyclone</option>
-						<option value="WTGP">Grey Cyclone (2016)</option>
+						<option class="ms-2016" value="WTGP">Grey Cyclone</option>
 					</optgroup>
 					<optgroup label="21″">
 						<option value="WT21">Silver Turbine</option>
@@ -115,7 +107,7 @@
 					<option value="IDOG">Obeche Gloss</option>
 					<option value="IDPB">Piano Black</option>
 					<option value="IDBA">Dark Ash Wood</option>
-					<option value="IDBO">Figured Ash Wood (2016+)</option>
+					<option class="ms-2016" value="IDBO">Figured Ash Wood</option>
 				</select>
 			</label>
 			<label class="ms">Headliner
@@ -128,10 +120,10 @@
 			<label class="ms">Roof
 				<select id="roof">
 					<option value="RFBC">Solid Color</option>
-					<option value="RFBK">Solid Black (2012)</option>
+					<option class="ms-2012" value="RFBK">Solid Black</option>
 					<option value="RFPO">Panoramic Sunroof</option>
 					<option value="RFP2">Panoramic Sunroof v2</option>
-					<option value="RFFG">Full Glass (2016)</option>
+					<option class="ms-2016" value="RFFG">Full Glass</option>
 				</select>
 			</label>
 			<label class="ms">Brakes
@@ -148,14 +140,14 @@
 						<option value="STUD_3QTR">Front</option>
 						<option class="ms" value="STUD_REAR">Rear</option>
 						<option class="ms" value="STUD_ABOV">Above</option>
-						<option class="ms" value="OUT1_3QTR">Outside 3D (2012)</option>
+						<option class="ms-2012" value="OUT1_3QTR">Outside 3D</option>
 					</optgroup>
 					<optgroup label="Interior">
 						<option value="STUD_SEAT">Side</option>
-						<option class="ms" value="STUD_SEAT_DRIVER">Driver (2012)</option>
-						<option class="ms" value="STUD_SEAT_3QTR">Passenger (2012)</option>
+						<option class="ms-2012" value="STUD_SEAT_DRIVER">Driver</option>
+						<option class="ms-2012" value="STUD_SEAT_3QTR">Passenger</option>
 						<option class="ms" value="STUD_SEAT_ABOVE">Above</option>
-						<option class="ms" value="STUD_SEAT_ALTA">Seats (2016)</option>
+						<option class="ms-2016" value="STUD_SEAT_ALTA">Seats</option>
 					</optgroup>
 				</select>
 			</label>
