--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Tesla Garage</title>
+		<title>Tesla Preview</title>
 		<link rel="stylesheet" href="styles/main.css">
 	</head>
 	<body>
