Clean up some seat ms

--- a/index.html
+++ b/index.html
@@ -80,18 +80,18 @@
 			<label class="ms">Seats
 				<select id="seats">
 					<optgroup label="Textile">
-						<option value="IBMB">Black (2012)</option>
-						<option value="QTTB">Black (2016)</option>
+						<option class="ms-2012" value="IBMB">Black</option>
+						<option class="ms-2016" value="QTTB">Black</option>
 					</optgroup>
-					<optgroup label="Leather (2012)">
+					<optgroup class="ms-2012" label="Leather">
 						<option value="IPMB">Black</option>
 						<option value="IPMG">Gray</option>
 						<option value="IPMT">Tan</option>
 					</optgroup>
-					<optgroup label="Leather (2016)">
+					<optgroup class="ms-2016" label="Leather">
 						<option value="QPMB">Black</option>
 					</optgroup>
-					<optgroup label="Premium (2016)">
+					<optgroup class="ms-2016" label="Premium">
 						<option value="QTPP">Black</option>
 						<option value="QTPC">Cream</option>
 						<option value="QTPW">White</option>
@@ -102,10 +102,10 @@
 						<option value="IZMG">Gray</option>
 						<option value="IZMT">Tan</option>
 					</optgroup>
-					<optgroup label="Signature Perforated Leather">
-						<option value="ISZW">White (2012)</option>
-						<option value="ISZB">Black (2012)</option>
-						<option value="ISZT">Tan (2012)</option>
+					<optgroup class="ms-2012" label="Signature Perforated">
+						<option value="ISZW">White Leather</option>
+						<option value="ISZB">Black Leather</option>
+						<option value="ISZT">Tan Leather</option>
 					</optgroup>
 				</select>
 			</label>
