--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 			<label class="mx">Seating
 				<select id="seating">
 					<option value="SR07">7</option>
+					<option value="SR04">6</option>
 					<option value="SR05">5</option>
 				</select>
 			</label>
